# Icelander

./: .clangd  .gitmodules  CMakeLists.txt  README.md
cmake/: IcelanderConfig.cmake.in
examples/: CMakeLists.txt  README.md
examples/advanced/: CMakeLists.txt  comprehensive_example.cpp  performance_benchmark.cpp
examples/basic/: CMakeLists.txt  README.md  packet_builder_example.cpp  sync_example.cpp
examples/networking/: CMakeLists.txt  async_client.cpp  async_server.cpp
examples/tests/: CMakeLists.txt  unit_tests.cpp
include/: icelander.hpp
src/: async.cpp  endpoint.cpp  event_dispatcher.cpp  host.cpp  library.cpp  packet.cpp  peer.cpp
